[package]
name = "ross-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "ross_server"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.25.0"
anyhow = "^1.0.98"
ross-core = { path = "./ross-core" }
